--- a/css/main.css
+++ b/css/main.css
@@ -1678,7 +1678,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffaad0;
+  background: #ff627e;
 }
 .links-of-blogroll {
   font-size: 13px;
